@@ -1,3 +1,15 @@
+jilles      2006/06/24 23:22:40 UTC	(20060624-5548)
+  Log:
+  check_modes():
+  - Use new modestacker api
+  - Simplify somewhat, pretty-printing mode changes is the
+    modestacker's task, not ours
+  
+
+  Changes:	Modified:
+  +10 -27	trunk/src/cmode.c (File Modified) 
+
+
 jilles      2006/06/24 23:08:30 UTC	(20060624-5546)
   Log:
   Add a command line option -l to change the log file.
